--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 theme = "Stack"
-baseURL = 'https://linmod.de/'
+baseURL = 'https://fudomine.github.io'
 languageCode = 'zh-cn'
-title = '小林的研究存档'
+title = '不负耕耘，不负时光'
