--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,5 +1,5 @@
 # Change baseurl before deploy
-baseurl = "https://demo.stack.jimmycai.com"
+baseurl = "https://fudomine.github.io"
 languageCode = "zh-cn"
 title = "Kobayashi - Memochou"
 
